--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -38,7 +38,7 @@ body {
   height: 5vh;
   position: fixed;
   border-radius: 5px;
-  border: 2px solid #0000ff;
+  border: 2px solid #00f;
   outline: none;
   margin-left: 73%;
   font-size: 15px;
@@ -49,16 +49,6 @@ body {
   height: 100vh;
   margin: 10px;
   border: 5px solid #0e0d0c;
-}
-
-.design-card {
-  background-color: #f0f8ff;
-  align-items: center;
-  justify-content: center;
-  height: 50vh;
-  width: 80vw;
-  margin-left: 9%;
-  border-radius: 30px;
 }
 
 .container {
@@ -76,7 +66,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 5px solid #000000;
+  border: 5px solid #000;
 }
 
 .cocktails {
@@ -148,7 +138,7 @@ button {
   outline: none;
   color: #fff;
   font-size: 17px;
-  border: 2px solid #000000;
+  border: 2px solid #000;
   cursor: pointer;
 }
 
